--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,56 +2,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical" >
-    
+    android:orientation="vertical"
+    tools:context=".MainActivity" >
+
     <TextView
         android:id="@+id/textview_user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    
-	<LinearLayout
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"
-	    tools:context=".MainActivity"
-	    android:orientation="horizontal" >
-	    
-	    <Button 
-	        android:id="@+id/button_login"
-	        android:layout_height="wrap_content"
-	        android:layout_width="wrap_content"
-	        android:onClick="onClickLogin"
-	        android:clickable="true"
-	        android:text="@string/button_login_text"
-	        android:visibility="visible" />
-	    
-	    <Button 
-	        android:id="@+id/button_new_story"
-	        android:layout_height="wrap_content"
-	        android:layout_width="wrap_content"
-	        android:onClick="onClickNewStory"
-	        android:clickable="true"
-	        android:text="@string/button_new_story"
-	        android:visibility="gone" />
-	    
-	    <Button 
-	        android:id="@+id/button_logout"
-	        android:layout_height="wrap_content"
-	        android:layout_width="wrap_content"
-	        android:onClick="onClickLogout"
-	        android:clickable="true"
-	        android:text="@string/button_logout"
-	        android:visibility="gone" />
-	    
-	    <Button 
-	        android:id="@+id/button_get_story"
-	        android:layout_height="wrap_content"
-	        android:layout_width="wrap_content"
-	        android:onClick="onClickGetStory"
-	        android:clickable="true"
-	        android:text="@string/button_get_story"
-	        android:visibility="gone" />
-	
-	</LinearLayout>
-	
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        tools:context=".MainActivity" >
+
+        <Button
+            android:id="@+id/button_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:onClick="onClickLogin"
+            android:text="@string/button_login_text"
+            android:visibility="visible" />
+
+        <Button
+            android:id="@+id/button_new_story"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:onClick="onClickNewStory"
+            android:text="@string/button_new_story"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/button_logout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:onClick="onClickLogout"
+            android:text="@string/button_logout"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/button_get_story"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:onClick="onClickGetStory"
+            android:text="@string/button_get_story"
+            android:visibility="gone" />
+    </LinearLayout>
+
 </LinearLayout>
