Changed the Login activity from using a 'WebView' to using android UI

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:onClick="onClickLogin"
-        android:text="@string/button_login_text"
+        android:text="@string/button_login"
         android:visibility="visible" />
 
     <Button
