--- a/res/layout/activity_story.xml
+++ b/res/layout/activity_story.xml
@@ -58,7 +58,7 @@
                 android:layout_height="wrap_content"
                 android:clickable="true"
                 android:onClick="onClickSendButton"
-                android:text="@string/button_send_story" />
+                android:text="@string/button_send" />
 
             <Button
                 android:layout_width="wrap_content"
