--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,6 +1,76 @@
-<WebView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/webview_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity" />
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context=".LoginActivity" >
+
+    <RelativeLayout
+        android:gravity="right"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        
+    <TextView
+        android:id="@+id/textview_change_action"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:onClick="onClickChangeAction"
+        android:text="@string/new_user"
+        android:textColor="#0000cc"
+        android:textSize="18sp" />
+    
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/textview_error_msg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dip" />
+
+    <EditText
+        android:id="@+id/edittext_username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dip"
+        android:hint="@string/login_username"
+        android:inputType="text"
+        android:maxLength="12" />
+
+    <TextView
+        android:id="@+id/textview_username_error_msg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <EditText
+        android:id="@+id/edittext_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dip"
+        android:hint="@string/login_password"
+        android:inputType="textPassword"
+        android:maxLength="12" />
+
+    <TextView
+        android:id="@+id/textview_password_error_msg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <RelativeLayout
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+        
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dip"
+        android:onClick="onClickLogin"
+        android:text="@string/button_send" />
+    </RelativeLayout>
+
+</LinearLayout>
