--- a/res/layout/activity_new_story.xml
+++ b/res/layout/activity_new_story.xml
@@ -8,6 +8,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".StoryActivity" >
+    
+    <FrameLayout
+        android:id="@+id/frame_menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </FrameLayout>
 
     <EditText
         android:id="@+id/edittext_new_story"
@@ -28,8 +34,6 @@
             android:id="@+id/button_send_story"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clickable="true"
-            android:onClick="onClickSendButton"
             android:text="@string/button_send" />
     </LinearLayout>
 </LinearLayout>
