--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,10 +7,10 @@
 
     <FrameLayout
         android:id="@+id/frame_menu"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingTop="@dimen/activity_vertical_margin" >
     </FrameLayout>
 
     <FrameLayout
