--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -2,75 +2,117 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".LoginActivity" >
 
-    <RelativeLayout
-        android:gravity="right"
+    <ImageView
+        android:layout_width="65dp"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/imageview_logo"
+        android:src="@drawable/logo" />
+
+    <LinearLayout
+        android:id="@+id/layout_sending"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-        
-    <TextView
-        android:id="@+id/textview_change_action"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:onClick="onClickChangeAction"
-        android:text="@string/title_new_user"
-        android:textColor="#0000cc"
-        android:textSize="18sp" />
-    
-    </RelativeLayout>
-
-    <TextView
-        android:id="@+id/textview_error_msg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dip" />
-
-    <EditText
-        android:id="@+id/edittext_username"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dip"
-        android:hint="@string/edittext_hint_login_username"
-        android:inputType="text"
-        android:maxLength="12" />
-
-    <TextView
-        android:id="@+id/textview_username_error_msg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <EditText
-        android:id="@+id/edittext_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dip"
-        android:hint="@string/edittext_hint_login_password"
-        android:inputType="textPassword"
-        android:maxLength="12" />
-
-    <TextView
-        android:id="@+id/textview_password_error_msg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <RelativeLayout
+        android:layout_height="match_parent"
         android:gravity="center"
+        android:orientation="vertical"
+        android:visibility="gone" >
+
+        <TextView
+            android:id="@+id/textview_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/message_wait"
+            android:textSize="20sp" />
+
+        <ProgressBar
+            android:id="@+id/loading_spinner"
+            style="?android:progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-        
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dip"
-        android:onClick="onClickLogin"
-        android:text="@string/button_send" />
-    </RelativeLayout>
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical" >
+
+        <EditText
+            android:id="@+id/edittext_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dip"
+            android:layout_marginRight="20dip"
+            android:hint="@string/edittext_hint_login_username"
+            android:inputType="text"
+            android:maxLength="12" />
+
+        <TextView
+            android:id="@+id/textview_username_error_msg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <EditText
+            android:id="@+id/edittext_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dip"
+            android:layout_marginRight="20dip"
+            android:hint="@string/edittext_hint_login_password"
+            android:inputType="textPassword"
+            android:maxLength="12" />
+
+        <TextView
+            android:id="@+id/textview_password_error_msg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/button_registration"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="30dip"
+            android:layout_marginRight="30dip"
+            android:background="@drawable/basic_button"
+            android:onClick="onClickLogin"
+            android:text="@string/button_sign_in"
+            android:textColor="@android:color/white" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="bottom"
+            android:orientation="vertical" >
+
+            <Button
+                android:id="@+id/textview_facebook"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/clickable_text"
+                android:gravity="left|center_vertical"
+                android:onClick="onClickFacebookSignUp"
+                android:paddingLeft="10dp"
+                android:text="@string/button_facebook_signup"
+                android:enabled="false"
+                android:textColor="@android:color/white" />
+
+            <Button
+                android:id="@+id/textview_change_action"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:background="@drawable/clickable_text"
+                android:gravity="left|center_vertical"
+                android:onClick="onClickChangeAction"
+                android:paddingLeft="10dp"
+                android:text="@string/title_new_user"
+                android:textColor="@android:color/white" />
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
