--- a/res/layout/fragment_edit_story.xml
+++ b/res/layout/fragment_edit_story.xml
@@ -24,82 +24,95 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
-    <ScrollView
+    <LinearLayout
         android:id="@+id/layout_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:visibility="gone" >
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:orientation="vertical" >
+
+                <TextView
+                    android:id="@+id/textview_story"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/textview_last_segment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal" >
+
+                    <Button
+                        android:id="@+id/button_prev_segment"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/button_prev"
+                        android:visibility="gone" />
+
+                    <Button
+                        android:id="@+id/button_next_segment"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/button_next"
+                        android:visibility="gone" />
+                </LinearLayout>
+            </LinearLayout>
+        </ScrollView>
+
+        <EditText
+            android:id="@+id/edittext_add_segment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/edittext_hint_story"
+            android:paddingTop="@dimen/activity_vertical_margin" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:gravity="center_horizontal"
+            android:orientation="horizontal" >
 
-            <TextView
-                android:id="@+id/textview_story"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/button_replace_story"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/story_replace" />
 
-            <TextView
-                android:id="@+id/textview_last_segment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+            <Button
+                android:id="@+id/button_send_story"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:background="@drawable/basic_button"
+                android:text="@string/button_send"
+                android:textColor="@android:color/white" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal" >
-
-                <Button
-                    android:id="@+id/button_prev_segment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/button_prev" />
-
-                <Button
-                    android:id="@+id/button_next_segment"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/button_next" />
-            </LinearLayout>
-
-            <EditText
-                android:id="@+id/edittext_add_segment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/edittext_hint_story"
-                android:paddingTop="@dimen/activity_vertical_margin" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin" >
-
-                <Button
-                    android:id="@+id/button_send_story"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/button_send" />
-
-                <Button
-                    android:id="@+id/button_reject_story"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/button_reject_story" />
-
-                <Button
-                    android:id="@+id/button_replace_story"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/button_replace_story" />
-            </LinearLayout>
+            <Button
+                android:id="@+id/button_reject_story"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/story_reject" />
         </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
 
 </FrameLayout>
