--- a/res/layout/fragment_new_story.xml
+++ b/res/layout/fragment_new_story.xml
@@ -2,12 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
+    android:baselineAligned="false"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".StoryActivity" >
 
     <LinearLayout
@@ -32,24 +28,29 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/layout_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical" >
+        android:layout_height="wrap_content" >
 
         <EditText
             android:id="@+id/edittext_new_story"
+            android:layout_above="@+id/button_send_story"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
             android:hint="@string/edittext_hint_new_segment" />
 
         <Button
             android:id="@+id/button_send_story"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/button_send" />
-    </LinearLayout>
+            android:layout_marginLeft="30dip"
+            android:layout_marginRight="30dip"
+            android:background="@drawable/basic_button"
+            android:text="@string/button_send"
+            android:layout_alignParentBottom="true"
+            android:textColor="@android:color/white" />
+    </RelativeLayout>
 
 </LinearLayout>
