--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,8 +9,8 @@
         android:id="@+id/frame_menu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingTop="@dimen/activity_vertical_margin" >
+        android:paddingBottom="5dp"
+        android:paddingTop="5dp" >
     </FrameLayout>
 
     <FrameLayout
