--- a/res/layout/fragment_new_story.xml
+++ b/res/layout/fragment_new_story.xml
@@ -1,9 +1,7 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:baselineAligned="false"
-    android:orientation="vertical"
     tools:context=".StoryActivity" >
 
     <LinearLayout
@@ -28,29 +26,30 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/layout_main"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="#80ffffff"
+        android:orientation="horizontal" >
 
         <EditText
             android:id="@+id/edittext_new_story"
-            android:layout_above="@+id/button_send_story"
-            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:hint="@string/edittext_hint_new_segment" />
 
         <Button
-            android:id="@+id/button_send_story"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dip"
-            android:layout_marginRight="30dip"
-            android:background="@drawable/basic_button"
-            android:text="@string/button_send"
-            android:layout_alignParentBottom="true"
-            android:textColor="@android:color/white" />
-    </RelativeLayout>
+            android:id="@+id/button_send_new_story"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_gravity="center"
+            android:background="@drawable/icon_arrow_right" />
+    </LinearLayout>
 
-</LinearLayout>
+</FrameLayout>
